--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-tes
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ <meta charset="UTF-8">
+ <title> DevOps Sessions</title>
+</head>
+<body style="background-color:rgb(165, 42, 165);">
+ <h1>This DevOps session is about Git lab 2, let’s GO!</h1>
+</body>
+</html>
+
