--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body style="background-color:rgb(165, 42, 165);">
  <h1>This DevOps session is about Git lab 2, let’s GO!</h1>
+ <h1>This DevOps session is about Git lab 2-1 let’s GO!</h1>
 </body>
 </html>
 
